Pension receipts API consumption

--- a/src/app/features/lms/grp/components/dashboard/components/landing-dashboard/landing-dashboard.component.html
+++ b/src/app/features/lms/grp/components/dashboard/components/landing-dashboard/landing-dashboard.component.html
@@ -106,7 +106,7 @@
                 </tr>
                 <tr>
                     <td>Fund value:</td>
-                    <td class="td-data">976875</td>
+                    <td class="td-data">{{ memberPolicies[0]?.total_sum_assured }}</td>
                 </tr>
             </table>
         </div>
