--- a/src/app/features/gis/components/policy/components/coinsuarance-details/coinsuarance-details.component.html
+++ b/src/app/features/gis/components/policy/components/coinsuarance-details/coinsuarance-details.component.html
@@ -67,7 +67,7 @@
                             <div class="col-sm-2"></div>
                             <div class="col-sm-3">
                                 <button type="button" id="icon" class="btn btn-primary" data-bs-toggle="modal"
-                                    data-bs-target="#addThirdDetails" title="Edit">
+                                    data-bs-target="#addCoinsurance" title="add">
                                     <i class="fa-solid fa-plus"></i>
                                 </button>
                             </div>
@@ -79,7 +79,7 @@
                             </div>
                             <div class="col-sm-3">
                                 <button type="button" id="icon" class="btn btn-primary" data-bs-toggle="modal"
-                                    data-bs-target="#deleteThirdDetails" title="Edit">
+                                    data-bs-target="#deleteCoinsurance" title="Delete">
                                     <i class="fa-solid fa-trash-can"></i>
                                 </button>
                             </div>
@@ -89,6 +89,82 @@
 
                     </div>
                 </div>
+                <!-- Add Coinsurance Modal -->
+                <div class="modal fade" id="addCoinsurance" tabindex="-1" aria-labelledby="exampleModalLabel"
+                    aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered ">
+                        <div class="modal-content">
+                            <div class="modal-body">
+                                <div class="d-flex justify-content-between align-items-center ">
+                                    <h5 class="modal-small-title" id="exampleModalLabel">Select co-insurer</h5>
+                                    <button type="button" class="btn" data-bs-dismiss="modal" aria-label="Close">
+                                        <i class="fas fa-times"></i>
+                                    </button>
+
+                                </div>
+                                <div class="search-container mb-3">
+                                    <span class="search-icon"><i class="fa fa-search"></i></span>
+                                    <input type="text" placeholder="Search" id="search-input-Rsection" />
+                                </div>
+                                <p-table dataKey="code" [tableStyle]="{ 'min-width': '300px' }" [paginator]="true"
+                                [rows]="10">
+                                    <ng-template pTemplate="header">
+                                        <tr>
+                                            <!-- <th style="width: 4rem">
+                                                <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
+                                            </th> -->
+                                            <th>Select</th>
+                                            <th>Short description</th>
+                                            <th>Name</th>
+
+                                        </tr>
+                                    </ng-template>
+                                    <ng-template pTemplate="body">
+                                        <tr>
+                                            <!-- <td>
+                                                <p-tableCheckbox [value]="product"></p-tableCheckbox>
+                                            </td> -->
+                                            <td></td>
+                                            <td></td>
+                                            <td></td>
+
+                                        </tr>
+                                    </ng-template>
+                                    <ng-template pTemplate="emptymessage">
+                                        <tr>
+                                            <td colspan="8" style="padding: 20px; text-align:center " id="empty">No data
+                                                to display.</td>
+                                        </tr>
+                                    </ng-template>
+                                </p-table>
+                                <div class="mt-4 d-flex justify-content-end">
+                                    <button type="button" class="btn btn-primary " id="saveDetails" data-bs-dismiss="modal" >Save </button>
+                                  </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Delete Coicsurance Modal -->
+                <div class="modal fade" id="deleteCoinsurance" tabindex="-1" role="dialog" aria-labelledby="deleteCoinsurance" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered" role="document">
+                      <div class="modal-content" id="deleteCoinsurance">
+                        <div class="modal-body ">
+                         <p class="deleteMessage mt-4 mb-4">Are you sure you want to delete?</p>
+
+                         <div class="row mt-4 mb-2 d-flex justify-content-center">
+                            <div class="col-6 ">
+                              <button type="button" class="btn btn-outline-primary "  data-bs-dismiss="modal" >Cancel</button>
+                            </div>
+                            <div class="col-6 d-flex justify-content-end">
+                                <button type="button" class="btn btn-primary" id="save" data-bs-dismiss="modal" >Delete</button>
+
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                </div>
+
                 <p-table [tableStyle]="{'min-width': '300px'}" selectionMode="single" dataKey="code" editMode="row">
                     <ng-template pTemplate="header">
                         <tr>
@@ -128,9 +204,15 @@
                             </td>
                         </tr>
                     </ng-template>
+                    <ng-template pTemplate="emptymessage">
+                        <tr>
+                            <td colspan="8" style="padding: 20px; text-align:center " id="empty">No data to display.
+                            </td>
+                        </tr>
+                    </ng-template>
                 </p-table>
 
-               
+
 
             </div>
 
